2025-07-26  Araki Ken  <arakiken@users.sf.net>

	* win32/ui_window.c: Fix compiling error in {xct|utf}_selection_request().

2025-07-21  Araki Ken  <arakiken@users.sf.net>

	* ui_screen.[ch]: Adjust the trigger to enter flick scroll mode.

	* sdl2/ui.h: Define FLICK_SCROLL.

	* sdl2/ui_display.c:
	  - Ignore SDL_CLIPBOARDUPDATE event.
	  - Process SDL_FINGERDOWN, SDL_FINGERUP and SDL_FINGERMOTION events.

	* sdl2/ui.h: Add Button10 for touch finger events.

2025-05-31  Araki Ken  <arakiken@users.sf.net>

	* vt_parser.c: Add null character to the color response sequence
	  in report_char_attr_status().
	  (https://github.com/arakiken/mlterm/issues/143)

	* */ui.h: Add SELECTION_STYLE_CHANGEABLE macro.

	* ui_selection.h: Remove SELECTION_STYLE_CHANGEABLE macro.

	* vte.c: Add vte 0.80 apis.

2025-05-25  Araki Ken  <arakiken@users.sf.net>

	* vt_parser.c:
	  - RIS doesn't reset DECMODE_40, like xterm.
	  - VTMODE_33 is on by default.

	* vt_pty_ssh.c: Fix the previous commit.

2025-05-24  Araki Ken  <arakiken@users.sf.net>

	* vt_pty_ssh.c: Fix compiling error.

	* man/mlterm.1, README.ja: Updated.

	* ui_im_{candidate|status}_screen.[ch]: Process window_resized event.

	* ui_screen.c: Regard "default" value of screen->input_method as "xim".

	* ui_main_config.c: Add "default" as a value of "input_method" option.

2025-05-07  Araki Ken  <arakiken@users.sf.net>

	* ui_screen.c: Call ui_inline_picture_clear_transparent_flag() in entering
	  backscroll mode.

	* ui_picture.[ch]: Add ui_inline_picture_clear_transparent_flag().

2025-05-06  Araki Ken  <arakiken@users.sf.net>

	* vt_parser.[ch], ui_screen.c:
	  - Add MOUSE_REPORT_BY_PIXEL to vt_mouse_report_mode_t.
	  - LOCATOR_CHARCELL_REPORT -> LOCATOR_REPORT
	    LOCATOR_PIXEL_REPORT -> LOCATOR_REPORT|MOUSE_REPORT_BY_PIXEL
	  - Add EXTENDED_MOUSE_REPORT_SGR_PIXEL to vt_extended_mouse_report_mode_t.
	  - Add DECMODE_1016 to vtmode_t.
	  - Unreset mouse report mode in DECSTR.
