@@ -1,5 +1,8 @@
 2025-07-26  Araki Ken  <arakiken@users.sf.net>
 
+	* android/jni/ui_display.c: 'xev.state |= _display.button_state' in
+	  processing AMOTION_EVENT_ACTION_MOVE in process_mouse_event().
+
 	* win32/ui_window.c: Fix compiling error in {xct|utf}_selection_request().
 
 2025-07-21  Araki Ken  <arakiken@users.sf.net>
